// LightRay: computes and renders the reflected ray path for the current experiment.

#ifndef LIGHTRAY_H
#define LIGHTRAY_H

#include <QPointF>
#include <QVector>
#include "wall.h"

class LightRay
{
public:
    LightRay(const QPointF& startPoint, double startAngle, const QVector<Wall*>& walls);

    void calculatePath(int maxReflections = 10000);
    void draw(QPainter& painter) const;
    const QVector<QPointF>& path() const { return m_path; }

private:
    QPointF m_startPoint;
    double m_startAngle;
    QVector<Wall*> m_walls;
    QVector<QPointF> m_path;
};

#endif // LIGHTRAY_H
